fix: review id, review title, review content, rating
fix: swagger config
fix: automigrate gorm
feat: add config to set page count to scrap at a time
